// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> Buttons --- Snapshot +++capturing Snapshot of Button 1`] = `
<button
  className="dp-button dp-button--s dp-button--primary dp-button--shape-default"
  disabled={false}
>
  Button
</button>
`;

exports[`>>> Buttons --- Snapshot +++capturing Snapshot of ButtonPopper 1`] = `
<span
  size="small"
  type="primary"
>
  Button
</span>
`;

exports[`>>> Buttons --- Snapshot +++capturing Snapshot of DropdownButton 1`] = `
<button
  className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-dropdown-button"
  disabled={false}
  onClick={[Function]}
>
  Test
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-caret-down fa-w-10 fa-sm dp-icon"
    data-icon="caret-down"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 320 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <div />
</button>
`;

exports[`>>> Buttons --- Snapshot +++capturing Snapshot of ProgressButton 1`] = `
<div
  className="dp-progress-button dp-progress-button--l"
>
  <div
    className="dp-progress-button__label"
  >
    75
  </div>
  <div
    className="dp-progress dp-progress--primary dp-progress--s"
  >
    <div
      className="dp-progress__bar"
      style={
        Object {
          "width": "75%",
        }
      }
      type="primary"
    >
      
    </div>
  </div>
</div>
`;

exports[`>>> Buttons --- Snapshot +++capturing Snapshot of SplitButton 1`] = `
<div
  className="dp-split-button"
>
  <button
    className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-split-button__left"
    disabled={false}
    onClick={[Function]}
  >
    Test
  </button>
  <button
    className="dp-button dp-button--l dp-button--primary dp-button--shape-default dp-split-button__right"
    disabled={false}
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-caret-down fa-w-10 fa-sm dp-icon"
      data-icon="caret-down"
      data-prefix="fas"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <div />
</div>
`;

exports[`>>> Buttons --- Snapshot +++capturing Snapshot of TranslateButton 1`] = `
<div
  className="dp-translate-button dp-translate-button--l"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-globe fa-w-16 fa-sm dp-icon"
    data-icon="globe"
    data-prefix="fas"
    role="img"
    style={Object {}}
    viewBox="0 0 496 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <div
    className="dp-progress-button dp-progress-button--l"
  >
    <div
      className="dp-progress-button__label"
    >
      65
    </div>
    <div
      className="dp-progress dp-progress--primary dp-progress--s"
    >
      <div
        className="dp-progress__bar"
        style={
          Object {
            "width": "65%",
          }
        }
        type="primary"
      >
        
      </div>
    </div>
  </div>
</div>
`;
